1.1.3

- Adds support for :option:`--cover-branches` (related to #370).
  Patch by Timothée Peignier.
- Fixed Unicode issue on Python 3.1 with coverage (#442)

1.1.2

- Fixed regression where the .coverage file was not saved (#439).
  Patch by Timothée Peignier.

1.1.1

- Fixed missing nose.sphinx module in source distribution (#436).

1.1.0

- Revised multiprocessing implementation so that it works for test generators
  (#399). Thanks to Rosen Diankov for the patch.
- More fixes to multiprocessing implemented by Buck Golemon and Gary Donovan
  (also part of #399).
- Lots of improvements to the attrib plugin by Bobby Impollonia (#412, #411,
  #324 and #381)
- Code coverage plugin now uses native HTML generation when coverage 3 is
  installed (#264). Thanks to Timothée Peignier for the patch.
- Xunit plugin now shows test run time in fractions of a second (#317)
- @attr (from nose.plugins.attrib) can now be used as a class decorator (#292)
- Fixes Xunit plugin to handle non-UTF8 characters (#395)
- Fixes Xunit plugin for reporting generator tests (#369)
- Fixed problems with SkipTest in Python 3.2 (#389)
- Fixed bug in doctest plugin under python 3. Thanks to Thomas Kluyver
  for the patch. (#391)
- Fixes mishandling of custom exceptions during failures (#405)
- Fixed subtle bug in :option:`--first-package-wins` that made it
  unpredictable (#293)
- Fixes case where teardown_class() was called more than once (#408). Thanks
  to Heng Liu for the patch.
- Fixes coverage module names -- 'cal' used to also match calendar which was a
  bug (#433)
- Fixes capture plugin when exception message contains non-ascii chars (#402)
- Fixed bug in tests for twisted tools. Thanks to Thomas Kluyver
  for the patch.
- Makes :option:`--plugins` more succinct when there are no options (#235)

1.0.0

- Made nose compatible with python 3. **Huge** thanks to Alex "foogod"
  Stewart!

0.11.4

- Made nose compatible with Python 2.7.

0.11.3
