@@ -329,6 +329,21 @@ Produce HTML coverage information in dir
 
 
 .TP
+\fB\-\-cover\-branches\fR\fR
+Include branch coverage in coverage report [NOSE_COVER_BRANCHES]
+
+
+.TP
+\fB\-\-cover\-xml\fR\fR
+Produce XML coverage information
+
+
+.TP
+\fB\-\-cover\-xml\-file\fR\fR=FILE
+Produce XML coverage information in file
+
+
+.TP
 \fB\-\-pdb\fR\fR
 Drop into debugger on errors
 
@@ -476,5 +491,5 @@ jpellerin+nose@gmail.com
 .SH COPYRIGHT
 LGPL
 
-.\" Generated by docutils manpage writer on 2011-08-05 10:25.
+.\" Generated by docutils manpage writer on 2011-10-10 09:32.
 .\" 
